--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 project(rpc VERSION 1.0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_library(rpc_common STATIC src/rpc/list_xdr.c)
+add_library(rpc_common STATIC src/rpc/list_xdr.c src/util.c)
 target_include_directories(rpc_common PUBLIC /usr/include/tirpc)
 target_link_libraries(rpc_common -ltirpc -lnsl)
 
